# WordEx

./: LICENSE  README.md  hello.txt  hello_french.txt  pyproject.toml
lib/: WEx_App.py  word_extractor.py
test/: test_WEx_App.py  test_english_words.py
