[tool.poetry]
name = "WordEx"
version = "0.1.1"
description = "Extract English, Spanish and French words from a given string then returns a list of the extracted words."
authors = ["Govine Jarrett <devgovine@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
